# minecraft-os

./: Cargo.toml  README.md  build.rs  flake.nix  justfile  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
kernel/: Cargo.toml
kernel-core/: Cargo.toml
kernel-core/src/: lib.rs
kernel-core/src/game/: camera.rs  mod.rs  screen.rs  world.rs
kernel-core/src/rendering/: color.rs  mod.rs  renderer.rs  text_box.rs
kernel/src/: acpi.rs  allocator.rs  console.rs  gdt.rs  interrupts.rs  lib.rs  logger.rs  main.rs  memory.rs  ps2.rs  rendering.rs
kernel/src/ps2/: keyboard.rs  mod.rs  mouse.rs
kernel/src/rendering/: mod.rs  text_box.rs
scripts/: run-uefi.sh
tests-integration/: Cargo.toml
tests-integration/src/: lib.rs
tests-integration/tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
tests-qemu-exit-code/: Cargo.toml
tests-qemu-exit-code/src/: lib.rs
