[package]
name = "minecraft-os"
version = "0.1.0"
edition = "2024"
default-run = "qemu-uefi"

[workspace]
members = ["kernel", "kernel-core", "tests-integration", "tests-qemu-exit-code"]
default-members = ["kernel", "kernel-core"]  # default for cargo run and cargo test

[build-dependencies]
kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.3"

[dependencies]
ovmf-prebuilt = "0.2.7"
bootloader = "0.11.3"
wait-timeout = "0.1.5"
tests-qemu-exit-code = { path = "tests-qemu-exit-code" }
