[package]
name = "kernel-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bootloader_api = "0.11.15"
embedded-graphics = "0.8.2"

[dependencies.noto-sans-mono-bitmap]
version = "0.2.0"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]
