cargo-features = ["per-package-target"]

[package]
name = "kernel"
version.workspace = true
edition = "2024"
default-target = "x86_64-unknown-none"

[[bin]]
name = "kernel"
test = false
bench = false

[lib]
test = false
doctest = false

[dependencies]
kernel-core = { path = "../kernel-core" }
x86_64.workspace = true
bootloader_api.workspace = true
log.workspace = true
conquer-once.workspace = true
spin.workspace = true
lazy_static.workspace = true
uart_16550.workspace = true
pic8259.workspace = true
pc-keyboard.workspace = true
linked_list_allocator.workspace = true
acpi.workspace = true
glam.workspace = true
