cargo-features = ["per-package-target"]

[package]
name = "tests-integration"
version = "0.1.0"
edition = "2024"
default-target = "x86_64-unknown-none"

[lib]
test = false

[dependencies]
kernel = { path = "../kernel" }
bootloader_api = "0.11.15"
x86_64 = "0.15.4"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
volatile = "0.6.1"
tests-qemu-exit-code = { path = "../tests-qemu-exit-code" }
