cargo-features = ["per-package-target"]

[package]
name = "tests-integration"
version.workspace = true
edition = "2024"
default-target = "x86_64-unknown-none"

[lib]
test = false

[dependencies]
kernel = { path = "../kernel" }
bootloader_api.workspace = true
x86_64.workspace = true
lazy_static.workspace = true
volatile.workspace = true
tests-qemu-exit-code = { path = "../tests-qemu-exit-code" }
